...
            break
        case .saveNote:
            if let cell = tableView.cellForRow(at: IndexPath(row: UserDetailDatasource.Enum_UserDetailRow.notes.rawValue, section: 0)) as? TextViewTableViewCell {
                let note = cell.textView.text
                dataSource.userListDetail?.note = note
                CoreDBManager.sharedDatabase.saveContext()
                showToast(message: "Note updated")
                view.endEditing(true)
            }
            break
        }
    }
    
...
