...
                <rect key="frame" x="0.0" y="0.0" width="381" height="153"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FhM-8L-z3S">
                        <rect key="frame" x="153.5" y="10" width="74" height="28"/>
                        <inset key="contentEdgeInsets" minX="20" minY="5" maxX="20" maxY="5"/>
                        <state key="normal" title="Save">
                            <color key="titleColor" systemColor="labelColor"/>
                        </state>
                        <connections>
                            <action selector="btnAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="BuW-Yf-gjS"/>
                        </connections>
                    </button>
...
