...
            break
        }
    }
    
    // MARK: TableView setup
    func setupTableView(tableView: UITableView) {
        tableView.accessibilityIdentifier = "userListTable"
        
        let arrCellIds: [String] = [
            UserDetailTableViewCell.identifier
        ]
        
        for id in arrCellIds {
...
