...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="733-3r-Sv9">
                                        <rect key="frame" x="0.0" y="25.5" width="372" height="100"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="notesTextView"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="100" id="6QM-rf-XgQ"/>
                                        </constraints>
                                        <color key="textColor" systemColor="labelColor"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
